Fix star spacing... againgit add .

--- a/app/assets/stylesheets/style_guide.css.scss
+++ b/app/assets/stylesheets/style_guide.css.scss
@@ -1523,10 +1523,10 @@ input[type=checkbox].css-checkbox {
 
 .star-ranking {
   // vertical-align: text-baseline;
-  text-align: right;
+  text-align: left;
   margin-top: -33px;
   position: relative;
-  width: 80px;
+  width: 60px;
   top: -7px;
 }
 
